force-app/main/default/objects/SelfReadingOutcomeRequest__c/SelfReadingOutcomeRequest__c.object-meta.xml
<CustomObject>
    <label>Richiesta Esito Autolettura</label>
    <nameField>
        <displayFormat>REA-{00000000}</displayFormat>
        <label>Richiesta Esito Autolettura Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Richieste Esito Autolettura</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>