force-app/main/default/objects/SelfReadingOutcomeRequest__c/fields/ActivityType__c.field-meta.xml
<CustomField>
    <fullName>ActivityType__c</fullName>
    <label>Tipo Attività</label>
    <length>255</length>
    <type>Text</type>
</CustomField>