force-app/main/default/objects/SelfReadingOutcomeRequest__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>La richiesta gestisce solamente le autoletture</errorMessage>
        <filterItems>
            <field>Case.Cluster__c</field>
            <operation>equals</operation>
            <value>Autolettura</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Richieste Esito Autolettura</relationshipLabel>
    <relationshipName>Richieste_Esito_Autolettura</relationshipName>
    <type>Lookup</type>
</CustomField>