force-app/main/default/objects/SelfReadingOutcomeRequest__c/fields/ErrorCode__c.field-meta.xml
<CustomField>
    <fullName>ErrorCode__c</fullName>
    <label>Codice Errore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>