force-app/main/default/objects/SelfReadingOutcomeRequest__c/fields/ErrorDescription__c.field-meta.xml
<CustomField>
    <fullName>ErrorDescription__c</fullName>
    <label>Descrizione Errore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>