force-app/main/default/objects/SelfReadingOutcomeRequest__c/fields/Request_Json__c.field-meta.xml
<CustomField>
    <fullName>Request_Json__c</fullName>
    <label>Request Json</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>