force-app/main/default/objects/SelfReadingOutcomeRequest__c/fields/StatusDescription__c.field-meta.xml
<CustomField>
    <fullName>StatusDescription__c</fullName>
    <label>Descrizione Stato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>